@@ -1,5 +1,8 @@
 2008-01-10  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
+	* erlang.c:
+	    Make the logged data narrower - to usually fit in 80 char lines.
+
 	* aprx.c:
 	    Always close STDIN from reading, and replace it with
 	    a file handle opened on /dev/null.
